// Copyright 2021 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package google.cloud.apigee.registry.applications.v1alpha1;
// [START go_declaration]
option go_package = "github.com/apigee/registry/rpc;rpc";
// [END go_declaration]

/*Diff contains the diff of a spec and its revision. */
message Diff {
  /* additions holds every addition change in the diff.
     The string will hold the entire field path of one addition change in the
     format foo.bar.x .*/
  repeated string additions = 1;
  /* deletions holds every deletion change in the diff.
     The string will hold the entire field path of one deletion change in the
     format foo.bar.x .*/
  repeated string deletions = 2;

  // ValueChange hold the values of the elements that changed in one diff change.
  message ValueChange {
    // from repersents the previous value of the element.
    string from = 1;
    // to repersents the current value of the element.
    string to = 2;
  }
  /* modifications holds every modification change in the diff.
     The string key will hold the field path of one modification change in the
     format foo.bar.x.
     The value of the key will repersent the element that was modified in the
     field. */
  map <string, ValueChange> modifications = 3;
}

/* ClassifiedChanges classifies changes from diff in to seperate categories. */
message ClassifiedChanges {
  /* breakingChanges is a Diff proto that only contians the breaking changes
  of a diff.*/
  Diff breakingChanges = 1;
  /* nonBreakingChanges is a Diff proto that only contians the non-breaking
  changes of a diff.*/
  Diff nonBreakingChanges = 2;
  /* unknownChanges is a Diff proto that contians all the changes that could not
  be classifed in the other categories.*/
  Diff unknownChanges = 3;
}

